# The-AI-Engineer-Challenge

./: .gitignore  .vercelignore  APPLICATION_FLOW_DOCUMENTATION.md  MERGE.md  pyproject.toml  requirements.txt  vercel.json
.cursor/rules/: frontend-rule.mdc  general-rule.mdc
aimakerspace/: multi_format_loader.py  setup.py
api/: app.py  requirements.txt
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: PDFSessionContext.tsx  SessionContext.tsx  env-config.js  globals.css  layout.tsx  page.tsx
frontend/src/utils/: config.ts
