[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "openai",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
    "PyPDF2>=3.0.1",
    "numpy>=1.24.3",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.18",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aimakerspace*"]
exclude = ["api*", "frontend*", "tests*", ".*"]

[tool.setuptools.package-dir]
aimakerspace = "aimakerspace"
