[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core API dependencies
    "fastapi>=0.115.12",
    "openai",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.18",
    "numpy>=1.24.3",
    
    # Document processing dependencies
    "PyPDF2>=3.0.1",              # PDF files
    "python-docx>=1.1.0",         # Word documents (.docx)
    "openpyxl>=3.1.2",            # Excel files (.xlsx)
    "python-pptx>=0.6.23",        # PowerPoint files (.pptx)
    "striprtf>=0.0.26",           # RTF files
    "markdown>=3.5.1",            # Markdown files
    "beautifulsoup4>=4.12.2",     # HTML parsing
    "lxml>=4.9.3",                # XML support
    "PyYAML>=6.0.1",              # YAML files
    "chardet>=5.2.0",             # Encoding detection
    
    # Text processing enhancements
    "python-magic>=0.4.27",       # File type detection (optional)
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aimakerspace*"]
exclude = ["api*", "frontend*", "tests*", ".*"]

[tool.setuptools.package-dir]
aimakerspace = "aimakerspace"
